test/libsolidity/syntaxTests/iele/sig.sol
contract test {
	constructor() {
		msg.sig;
	}
}
// ----
// TypeError 2699: (35-42): msg.sig is not supported in IELE. For more information, including potential workarounds, see README-IELE-SUPPORT.md
